--- a/gts.html
+++ b/gts.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vespa Ciledug | Varian LX</title>
+    <title>Vespa Ciledug | Varian GTS</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -173,7 +173,7 @@
         <div class="row">
           <div class="col-lg-12 col-12">
             <div class="card-cstm-vespa">
-              <img src="img/vespapng/LXnew.png" alt="" />
+              <img src="img/vespapng/gtsnew.png" alt="" />
             </div>
           </div>
         </div>
@@ -184,11 +184,10 @@
       <div class="gradient">
         <img src="img/bg-gradient-blurred.svg" />
         <div class="centered">
-          <h3>VESPA LX 125 I-GET</h3>
+          <h3>VESPA GTS SUPER 150 I-GET ABS</h3>
           <p>
-            Desainnya yang serupa dengan bentuk tawon membuat karakteristik
-            Vespa menjadi unik yang memadukan secara harmonis antara warisan
-            budaya Vespa dengan modernitas abad 21.
+            Sebuah ikon yang menekankan gaya sporty menakjubkan, keamanan,
+            kenyamanan berbalut kemewahan
           </p>
         </div>
       </div>
@@ -222,21 +221,21 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/GTS/gts-150-green-relax.png"
                     alt="First slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-grey-delicato.png"
+                    src="img/GTS/GTS-black-vulcano.png"
                     alt="Second slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/GTS/GTS-white-innocenza.png"
                     alt="Third slide"
                   />
                 </div>
@@ -265,8 +264,8 @@
               </a>
             </div>
             <div class="centered-two text-center">
-              <h1>Rp.40.500.000,-</h1>
-              <p>Rp 41,200,000, (OTR BOGOR)</p>
+              <h1>Rp.67.900.000,-</h1>
+              <p>Rp 68,600,000, (OTR BOGOR)</p>
             </div>
             <button
               type="button"
@@ -278,17 +277,15 @@
           </div>
           <div class="col-lg-8 col-12">
             <div class="masak">
-              <h1>DAPATKAN PENGALAMAN LEBIH DENGAN VESPA LX TERBARU</h1>
+              <h1>BERKENDARA LEBIH NYAMAN BERSAMA VESPA GTS SUPER</h1>
               <p>
-                Vespa LX 125 i-get sudah menggunakan mesin i-get (Italian Green
-                Experience Technology). Teknologi ini akan meningkatkan
-                performa, efisiensi bahan bakar dan mengurangi kebisingan dalam
-                berkendara serta sangat efisien. Seluruh detail mulai dari
-                saluran pembuangan, hingga penutup gearbox telah dirancang untuk
-                memberikan pengalaman berkendara yang lebih nyaman. Komponen
-                mekanikal dan elektronik dari mesin juga telah sepenuhnya
-                didesain untuk mengoptimalkan konsumsi bahan bakar dan performa
-                yang maksimal.
+                Vespa GTS Super 150 hadir dengan evolusi gaya dari warisan Vespa
+                GTS, menyeimbangkan tradisi dan modernitas mewujudkan karakter
+                khas Vespa mengusung gaya premium Italia, kenyamanan dan
+                keamanan. <br />
+                <br />
+                Didedikasikan untuk mereka yang menghargai sejarah dan
+                petualangan, keunikan, elegan dan kenyamanan
               </p>
               <p class="font">
                 *) Harga tertera adalah harga On the Road (OTR) Jadetabek 2022.
@@ -299,7 +296,7 @@
               <!-- Preview before Download PDF -->
               <a
                 target="_blank"
-                onclick="window.location.href='files/VESPA-LX-125-i-get-Brochure_belivespa.com_Irvan_2.pdf';"
+                onclick="window.location.href='files/VESPA-GTS-SUPER-150-i-get-ABS-Brochure_belivespa.com_Irvan.pdf';"
                 class="btn btn-primary-1 btn-lg"
               >
                 Download Brosur
@@ -327,26 +324,14 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/LED LX.png 375, img/vespa kecil/LED LX.png 480, img/vespa kecil/LED LX.png 800"
-                  data-src="img/vespa kecil/LED LX.png"
-                >
-                  <div class="item">
-                    <a href="">
-                      <img class="img-fluid" src="img/vespa kecil/LED LX.png" />
-                    </a>
-                  </div>
-                </li>
-                <li
-                  class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
-                  data-category="transition"
-                  data-responsive="img/vespa kecil/knalpot LX.png 375, img/vespa kecil/knalpot LX.png 480, img/vespa kecil/knalpot LX.png 800"
-                  data-src="img/vespa kecil/knalpot LX.png"
+                  data-responsive="img/vespa kecil/LED gts.png 375, img/vespa kecil/LED gts.png 480, img/vespa kecil/LED gts.png 800"
+                  data-src="img/vespa kecil/LED gts.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/knalpot LX.png"
+                        src="img/vespa kecil/LED gts.png"
                       />
                     </a>
                   </div>
@@ -354,14 +339,14 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/mesin LX.png 375, img/vespa kecil/mesin LX.png 480, img/vespa kecil/mesin LX.png 800"
-                  data-src="img/vespa kecil/mesin LX.png"
+                  data-responsive="img/vespa kecil/spido gts.png 375, img/vespa kecil/spido gts.png 480, img/vespa kecil/spido gts.png 800"
+                  data-src="img/vespa kecil/spido gts.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/mesin LX.png"
+                        src="img/vespa kecil/spido gts.png"
                       />
                     </a>
                   </div>
@@ -369,14 +354,29 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/Spido LX.png 375, img/vespa kecil/Spido LX.png 480, img/vespa kecil/Spido LX.png 800"
-                  data-src="img/vespa kecil/Spido LX.png"
+                  data-responsive="img/vespa kecil/duduk gts.png 375, img/vespa kecil/duduk gts.png 480, img/vespa kecil/duduk gts.png 800"
+                  data-src="img/vespa kecil/duduk gts.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/Spido LX.png"
+                        src="img/vespa kecil/duduk gts.png"
+                      />
+                    </a>
+                  </div>
+                </li>
+                <li
+                  class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
+                  data-category="transition"
+                  data-responsive="img/vespa kecil/mesin gts.png 375, img/vespa kecil/mesin gts.png 480, img/vespa kecil/mesin gts.png 800"
+                  data-src="img/vespa kecil/mesin gts.png"
+                >
+                  <div class="item">
+                    <a href="">
+                      <img
+                        class="img-fluid"
+                        src="img/vespa kecil/mesin gts.png"
                       />
                     </a>
                   </div>
@@ -412,7 +412,10 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Mesin</td>
-                  <td>i-get, 4 langkah, silinder tunggal dengan 3 katup</td>
+                  <td>
+                    i-get, 4 langkah, silinder tunggal 4 katup dilengkapi dengan
+                    sistem start & stop
+                  </td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -422,22 +425,22 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Kapasitas</td>
-                  <td>124,5 cc</td>
+                  <td>155,1 cc</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Daya Maks.</td>
-                  <td>7,6 kW @ 7.600 rpm</td>
+                  <td>10,8 kW @ 8.250 rpm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Torsi Maks.</td>
-                  <td>10,2 Nm @ 6.000 rpm</td>
+                  <td>13,5 Nm @ 6.750 rpm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Sistem Pendingin</td>
-                  <td>Sirkulasi Udara Tekan</td>
+                  <td>Berpendingin cairan</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -449,7 +452,7 @@
                   <td colspan="2">Suspensi Depan</td>
                   <td>
                     Lengan tunggal dengan pegas helikal dan peredam kejut
-                    hidrolik tunggal dengan aksi ganda
+                    hidrolik tunggal
                   </td>
                 </tr>
                 <tr>
@@ -477,37 +480,37 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Rem Depan</td>
-                  <td>Cakram 200 mm</td>
+                  <td>Cakram 220 mm ABS</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Rem Belakang</td>
-                  <td>Tromol 110 mm</td>
+                  <td>Cakram 220 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ban Depan</td>
-                  <td>Tubeless 110/70-11"</td>
+                  <td>Tubeless 120/70 – 12”</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ban Belakang</td>
-                  <td>Tubeless 110/70-10"</td>
+                  <td>Tubeless 130/70 – 12”</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Panjang / Lebar</td>
-                  <td>1.770 mm / 705 mm</td>
+                  <td>1.950 mm / 740 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Jarak Sumbu Roda</td>
-                  <td>1.280 mm</td>
+                  <td>1.350 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ketinggian Jok</td>
-                  <td>785 mm</td>
+                  <td>790 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -609,7 +612,6 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
       integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
@@ -621,7 +623,6 @@
       integrity="sha512-Qpvw3WG46QyOqV/YS9BosbxEbMKPREA+QS+iWAKXfvb/87tdfsGGQdT7vqYbQzBOgLvF2I/MHMacA86oURHsCw=="
       crossorigin="anonymous"
     ></script>
-
     <script src="js/main.js"></script>
     <script>
       $("#lightgallery").lightGallery({
