--- a/medley.html
+++ b/medley.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vespa Ciledug | Varian LX</title>
+    <title>Vespa Ciledug | Varian MEDLEY</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -168,12 +168,12 @@
     </span>
     <!-- end navbar -->
 
-    <section class="vespa-one">
+    <section class="vespa-one-medley">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12 col-12">
             <div class="card-cstm-vespa">
-              <img src="img/vespapng/LXnew.png" alt="" />
+              <img src="img/MEDLEY.png" alt="" />
             </div>
           </div>
         </div>
@@ -184,12 +184,8 @@
       <div class="gradient">
         <img src="img/bg-gradient-blurred.svg" />
         <div class="centered">
-          <h3>VESPA LX 125 I-GET</h3>
-          <p>
-            Desainnya yang serupa dengan bentuk tawon membuat karakteristik
-            Vespa menjadi unik yang memadukan secara harmonis antara warisan
-            budaya Vespa dengan modernitas abad 21.
-          </p>
+          <h3>PIAGGIO MEDLEY S</h3>
+          <p>Sporty soul</p>
         </div>
       </div>
     </section>
@@ -222,21 +218,21 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/Medley/MEDLEY-bianco-luna.png"
                     alt="First slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-grey-delicato.png"
+                    src="img/Medley/MEDLEY-Grigio-Materia.png"
                     alt="Second slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/Medley/MEDLEY-Nero-met-Opacco.png"
                     alt="Third slide"
                   />
                 </div>
@@ -265,8 +261,8 @@
               </a>
             </div>
             <div class="centered-two text-center">
-              <h1>Rp.40.500.000,-</h1>
-              <p>Rp 41,200,000, (OTR BOGOR)</p>
+              <h1>Rp.52.300.000,-</h1>
+              <p>Rp 52,300,000, (OTR BOGOR)</p>
             </div>
             <button
               type="button"
@@ -278,17 +274,20 @@
           </div>
           <div class="col-lg-8 col-12">
             <div class="masak">
-              <h1>DAPATKAN PENGALAMAN LEBIH DENGAN VESPA LX TERBARU</h1>
+              <h1>PIAGGIO MEDLEY S, UNTUK ANDA YANG BERJIWA SPORTY</h1>
               <p>
-                Vespa LX 125 i-get sudah menggunakan mesin i-get (Italian Green
-                Experience Technology). Teknologi ini akan meningkatkan
-                performa, efisiensi bahan bakar dan mengurangi kebisingan dalam
-                berkendara serta sangat efisien. Seluruh detail mulai dari
-                saluran pembuangan, hingga penutup gearbox telah dirancang untuk
-                memberikan pengalaman berkendara yang lebih nyaman. Komponen
-                mekanikal dan elektronik dari mesin juga telah sepenuhnya
-                didesain untuk mengoptimalkan konsumsi bahan bakar dan performa
-                yang maksimal.
+                Tidak hanya lincah dan gesit, tetapi juga cerdas secara
+                teknologi, Piaggio Medley S 150 i-get yang tampak sporty
+                menempatkan sejumlah fitur di ujung jari Anda dengan lampu depan
+                LED penuh baru dan kluster instrumen LCD canggih yang
+                menyediakan perpaduan sempurna antara fungsionalitas dan gaya.
+                Di sisi performa, ada mesin baru Piaggio i-get 4-tak, 4-katup,
+                yang telah memenuhi standar Euro-4 Euro-4 dengan fitur Start &
+                Stop. Dengan peningkatan daya dari 11kw menjadi 12.1kw, ini
+                adalah salah satu yang paling kuat di segmen roda menengah
+                tinggi, tanpa mengorbankan konsumsi bahan bakar. Finishing hitam
+                matt, elemen merah menyala, dan bentuk jok membuatnya sangat
+                jelas bahwa ini memang motor sporty.
               </p>
               <p class="font">
                 *) Harga tertera adalah harga On the Road (OTR) Jadetabek 2022.
@@ -299,7 +298,7 @@
               <!-- Preview before Download PDF -->
               <a
                 target="_blank"
-                onclick="window.location.href='files/VESPA-LX-125-i-get-Brochure_belivespa.com_Irvan_2.pdf';"
+                onclick="window.location.href='img/screencapture-127-0-0-1-5500-home-html-2022-06-27-18_45_30.pdf';"
                 class="btn btn-primary-1 btn-lg"
               >
                 Download Brosur
@@ -319,7 +318,7 @@
     </section>
 
     <section class="container_galleryvespa">
-      <div class="gallery_custom">
+      <div class="gallery_custom_medley">
         <div class="container-fluid">
           <div class="row grid">
             <div class="demo-gallery">
@@ -327,26 +326,14 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/LED LX.png 375, img/vespa kecil/LED LX.png 480, img/vespa kecil/LED LX.png 800"
-                  data-src="img/vespa kecil/LED LX.png"
-                >
-                  <div class="item">
-                    <a href="">
-                      <img class="img-fluid" src="img/vespa kecil/LED LX.png" />
-                    </a>
-                  </div>
-                </li>
-                <li
-                  class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
-                  data-category="transition"
-                  data-responsive="img/vespa kecil/knalpot LX.png 375, img/vespa kecil/knalpot LX.png 480, img/vespa kecil/knalpot LX.png 800"
-                  data-src="img/vespa kecil/knalpot LX.png"
+                  data-responsive="img/vespa kecil/MEDLEY-1.png 375, img/vespa kecil/MEDLEY-1.png 480, img/vespa kecil/MEDLEY-1.png 800"
+                  data-src="img/vespa kecil/MEDLEY-1.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/knalpot LX.png"
+                        src="img/vespa kecil/MEDLEY-1.png"
                       />
                     </a>
                   </div>
@@ -354,14 +341,14 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/mesin LX.png 375, img/vespa kecil/mesin LX.png 480, img/vespa kecil/mesin LX.png 800"
-                  data-src="img/vespa kecil/mesin LX.png"
+                  data-responsive="img/vespa kecil/MEDLEY-2.png 375, img/vespa kecil/MEDLEY-2.png 480, img/vespa kecil/MEDLEY-2.png 800"
+                  data-src="img/vespa kecil/MEDLEY-2.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/mesin LX.png"
+                        src="img/vespa kecil/MEDLEY-2.png"
                       />
                     </a>
                   </div>
@@ -369,14 +356,29 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/Spido LX.png 375, img/vespa kecil/Spido LX.png 480, img/vespa kecil/Spido LX.png 800"
-                  data-src="img/vespa kecil/Spido LX.png"
+                  data-responsive="img/vespa kecil/MEDLEY-3.png 375, img/vespa kecil/MEDLEY-3.png 480, img/vespa kecil/MEDLEY-3.png 800"
+                  data-src="img/vespa kecil/MEDLEY-3.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/Spido LX.png"
+                        src="img/vespa kecil/MEDLEY-3.png"
+                      />
+                    </a>
+                  </div>
+                </li>
+                <li
+                  class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
+                  data-category="transition"
+                  data-responsive="img/vespa kecil/MEDLEY-4.png 375, img/vespa kecil/MEDLEY-4.png 480, img/vespa kecil/MEDLEY-4.png 800"
+                  data-src="img/vespa kecil/MEDLEY-4.png"
+                >
+                  <div class="item">
+                    <a href="">
+                      <img
+                        class="img-fluid"
+                        src="img/vespa kecil/MEDLEY-4.png"
                       />
                     </a>
                   </div>
@@ -412,7 +414,10 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Mesin</td>
-                  <td>i-get, 4 langkah, silinder tunggal dengan 3 katup</td>
+                  <td>
+                    i-get, silinder tunggal, 4 katup, 4 langkah, dengan sistem
+                    Start & Stop
+                  </td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -422,22 +427,22 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Kapasitas</td>
-                  <td>124,5 cc</td>
+                  <td>155,1 cc</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Daya Maks.</td>
-                  <td>7,6 kW @ 7.600 rpm</td>
+                  <td>11 kW @ 7.750 rpm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Torsi Maks.</td>
-                  <td>10,2 Nm @ 6.000 rpm</td>
+                  <td>14,4 Nm @ 6.400 rpm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Sistem Pendingin</td>
-                  <td>Sirkulasi Udara Tekan</td>
+                  <td>Berpendingin cairan</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -447,16 +452,13 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Suspensi Depan</td>
-                  <td>
-                    Lengan tunggal dengan pegas helikal dan peredam kejut
-                    hidrolik tunggal dengan aksi ganda
-                  </td>
+                  <td>Suspensi Teleskopik Ganda</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Suspensi Belakang</td>
                   <td>
-                    Peredam kejut hidrolik tunggal dengan 4 tingkat setelan
+                    Dua Peredam kejut hidrolik ganda dengan 5 tingkat setelan
                     kekerasan
                   </td>
                 </tr>
@@ -476,38 +478,43 @@
               <tbody>
                 <tr>
                   <th scope="row"></th>
+                  <td colspan="2">Sistem Rem</td>
+                  <td>Hidrolik ABS dengan kanal ganda</td>
+                </tr>
+                <tr>
+                  <th scope="row"></th>
                   <td colspan="2">Rem Depan</td>
-                  <td>Cakram 200 mm</td>
+                  <td>Cakram 260 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Rem Belakang</td>
-                  <td>Tromol 110 mm</td>
+                  <td>Cakram 240 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ban Depan</td>
-                  <td>Tubeless 110/70-11"</td>
+                  <td>Tubeless 110/80 – 16”</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ban Belakang</td>
-                  <td>Tubeless 110/70-10"</td>
+                  <td>Tubeless 110/80 – 14”</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Panjang / Lebar</td>
-                  <td>1.770 mm / 705 mm</td>
+                  <td>1.950 mm / 770 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Jarak Sumbu Roda</td>
-                  <td>1.280 mm</td>
+                  <td>1.390 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ketinggian Jok</td>
-                  <td>785 mm</td>
+                  <td>705mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -609,7 +616,6 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
       integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
@@ -621,7 +627,6 @@
       integrity="sha512-Qpvw3WG46QyOqV/YS9BosbxEbMKPREA+QS+iWAKXfvb/87tdfsGGQdT7vqYbQzBOgLvF2I/MHMacA86oURHsCw=="
       crossorigin="anonymous"
     ></script>
-
     <script src="js/main.js"></script>
     <script>
       $("#lightgallery").lightGallery({
