--- a/S.html
+++ b/S.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vespa Ciledug | Varian LX</title>
+    <title>Vespa Ciledug | Varian S</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -173,7 +173,7 @@
         <div class="row">
           <div class="col-lg-12 col-12">
             <div class="card-cstm-vespa">
-              <img src="img/vespapng/LXnew.png" alt="" />
+              <img src="img/vespapng/Snew.png" alt="" />
             </div>
           </div>
         </div>
@@ -184,12 +184,8 @@
       <div class="gradient">
         <img src="img/bg-gradient-blurred.svg" />
         <div class="centered">
-          <h3>VESPA LX 125 I-GET</h3>
-          <p>
-            Desainnya yang serupa dengan bentuk tawon membuat karakteristik
-            Vespa menjadi unik yang memadukan secara harmonis antara warisan
-            budaya Vespa dengan modernitas abad 21.
-          </p>
+          <h3>VESPA S 125 I-GET</h3>
+          <p>Ketika jiwa sporty bertemu dengan gaya elegan</p>
         </div>
       </div>
     </section>
@@ -222,21 +218,21 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/S/s-orange-tramonto.png"
                     alt="First slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-grey-delicato.png"
+                    src="img/S/s-grey-materia.png"
                     alt="Second slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/S/s-yellow-sole.png"
                     alt="Third slide"
                   />
                 </div>
@@ -265,8 +261,8 @@
               </a>
             </div>
             <div class="centered-two text-center">
-              <h1>Rp.40.500.000,-</h1>
-              <p>Rp 41,200,000, (OTR BOGOR)</p>
+              <h1>Rp.42.000.000,-</h1>
+              <p>Rp 42,700,000, (OTR BOGOR)</p>
             </div>
             <button
               type="button"
@@ -278,17 +274,16 @@
           </div>
           <div class="col-lg-8 col-12">
             <div class="masak">
-              <h1>DAPATKAN PENGALAMAN LEBIH DENGAN VESPA LX TERBARU</h1>
+              <h1>BERKENDARA DENGAN PENUH ENERGI BERSAMA VESPA S 125</h1>
               <p>
-                Vespa LX 125 i-get sudah menggunakan mesin i-get (Italian Green
-                Experience Technology). Teknologi ini akan meningkatkan
-                performa, efisiensi bahan bakar dan mengurangi kebisingan dalam
-                berkendara serta sangat efisien. Seluruh detail mulai dari
-                saluran pembuangan, hingga penutup gearbox telah dirancang untuk
-                memberikan pengalaman berkendara yang lebih nyaman. Komponen
-                mekanikal dan elektronik dari mesin juga telah sepenuhnya
-                didesain untuk mengoptimalkan konsumsi bahan bakar dan performa
-                yang maksimal.
+                Vespa S tetap menjadi pilihan yang menyenangkan dan teman bagi
+                mereka yang ingin mengarungi kegembiraan mengendarai skuter
+                klasik ala Italia yang muda dan sporty. Vespa S baru memiliki
+                elemen kesederhanaan, minimalis, dinamis, dan sporty yang
+                diwariskan pendahulunya, Vespa 50 Special yang tersohor,
+                menjadikan Vespa S teman sempurna bagi orang muda yang ingin
+                hidup dengan jiwa muda – untuk sebuah hidup yang lebih
+                menyenangkan dan memiliki gaya hidup muda.
               </p>
               <p class="font">
                 *) Harga tertera adalah harga On the Road (OTR) Jadetabek 2022.
@@ -299,7 +294,7 @@
               <!-- Preview before Download PDF -->
               <a
                 target="_blank"
-                onclick="window.location.href='files/VESPA-LX-125-i-get-Brochure_belivespa.com_Irvan_2.pdf';"
+                onclick="window.location.href='files/VESPA-S-125-I-GET-Brochure_belivespa.com_Irvan.pdf';"
                 class="btn btn-primary-1 btn-lg"
               >
                 Download Brosur
@@ -327,26 +322,26 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/LED LX.png 375, img/vespa kecil/LED LX.png 480, img/vespa kecil/LED LX.png 800"
-                  data-src="img/vespa kecil/LED LX.png"
+                  data-responsive="img/vespa kecil/LED S.png 375, img/vespa kecil/LED S.png 480, img/vespa kecil/LED S.png 800"
+                  data-src="img/vespa kecil/LED S.png"
                 >
                   <div class="item">
                     <a href="">
-                      <img class="img-fluid" src="img/vespa kecil/LED LX.png" />
+                      <img class="img-fluid" src="img/vespa kecil/LED S.png" />
                     </a>
                   </div>
                 </li>
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/knalpot LX.png 375, img/vespa kecil/knalpot LX.png 480, img/vespa kecil/knalpot LX.png 800"
-                  data-src="img/vespa kecil/knalpot LX.png"
+                  data-responsive="img/vespa kecil/spido S.png 375, img/vespa kecil/spido S.png 480, img/vespa kecil/spido S.png 800"
+                  data-src="img/vespa kecil/spido S.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/knalpot LX.png"
+                        src="img/vespa kecil/spido S.png"
                       />
                     </a>
                   </div>
@@ -354,29 +349,26 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/mesin LX.png 375, img/vespa kecil/mesin LX.png 480, img/vespa kecil/mesin LX.png 800"
-                  data-src="img/vespa kecil/mesin LX.png"
+                  data-responsive="img/vespa kecil/BODY S.png 375, img/vespa kecil/BODY S.png 480, img/vespa kecil/BODY S.png 800"
+                  data-src="img/vespa kecil/BODY S.png"
                 >
                   <div class="item">
                     <a href="">
-                      <img
-                        class="img-fluid"
-                        src="img/vespa kecil/mesin LX.png"
-                      />
+                      <img class="img-fluid" src="img/vespa kecil/BODY S.png" />
                     </a>
                   </div>
                 </li>
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/Spido LX.png 375, img/vespa kecil/Spido LX.png 480, img/vespa kecil/Spido LX.png 800"
-                  data-src="img/vespa kecil/Spido LX.png"
+                  data-responsive="img/vespa kecil/mesin S.png 375, img/vespa kecil/mesin S.png 480, img/vespa kecil/mesin S.png 800"
+                  data-src="img/vespa kecil/mesin S.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/Spido LX.png"
+                        src="img/vespa kecil/mesin S.png"
                       />
                     </a>
                   </div>
@@ -609,7 +601,6 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
       integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
@@ -621,7 +612,6 @@
       integrity="sha512-Qpvw3WG46QyOqV/YS9BosbxEbMKPREA+QS+iWAKXfvb/87tdfsGGQdT7vqYbQzBOgLvF2I/MHMacA86oURHsCw=="
       crossorigin="anonymous"
     ></script>
-
     <script src="js/main.js"></script>
     <script>
       $("#lightgallery").lightGallery({
