--- a/gts-supertech.html
+++ b/gts-supertech.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vespa Ciledug | Varian LX</title>
+    <title>Vespa Ciledug | Varian GTS SUPERTECH</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -173,7 +173,7 @@
         <div class="row">
           <div class="col-lg-12 col-12">
             <div class="card-cstm-vespa">
-              <img src="img/vespapng/LXnew.png" alt="" />
+              <img src="img/vespapng/gtssupertechnew.png" alt="" />
             </div>
           </div>
         </div>
@@ -184,12 +184,8 @@
       <div class="gradient">
         <img src="img/bg-gradient-blurred.svg" />
         <div class="centered">
-          <h3>VESPA LX 125 I-GET</h3>
-          <p>
-            Desainnya yang serupa dengan bentuk tawon membuat karakteristik
-            Vespa menjadi unik yang memadukan secara harmonis antara warisan
-            budaya Vespa dengan modernitas abad 21.
-          </p>
+          <h3>VESPA GTS SUPER TECH 300</h3>
+          <p>Vespa tercanggih yang pernah ada</p>
         </div>
       </div>
     </section>
@@ -222,21 +218,21 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/GTS-supertech/gts-300-grey-delicato.png"
                     alt="First slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-grey-delicato.png"
+                    src="img/GTS-supertech/GTS-SUPER-black-vulcano.png"
                     alt="Second slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/GTS-supertech/gts-300-grey-delicato.png"
                     alt="Third slide"
                   />
                 </div>
@@ -265,8 +261,8 @@
               </a>
             </div>
             <div class="centered-two text-center">
-              <h1>Rp.40.500.000,-</h1>
-              <p>Rp 41,200,000, (OTR BOGOR)</p>
+              <h1>Rp.156.300.000,-</h1>
+              <p>Rp 156.300.000, (OTR BOGOR)</p>
             </div>
             <button
               type="button"
@@ -278,17 +274,16 @@
           </div>
           <div class="col-lg-8 col-12">
             <div class="masak">
-              <h1>DAPATKAN PENGALAMAN LEBIH DENGAN VESPA LX TERBARU</h1>
+              <h1>
+                BERKENDARA LEBIH CANGGIH DENGAN VESPA GTS SUPER TECH 300 TERBARU
+              </h1>
               <p>
-                Vespa LX 125 i-get sudah menggunakan mesin i-get (Italian Green
-                Experience Technology). Teknologi ini akan meningkatkan
-                performa, efisiensi bahan bakar dan mengurangi kebisingan dalam
-                berkendara serta sangat efisien. Seluruh detail mulai dari
-                saluran pembuangan, hingga penutup gearbox telah dirancang untuk
-                memberikan pengalaman berkendara yang lebih nyaman. Komponen
-                mekanikal dan elektronik dari mesin juga telah sepenuhnya
-                didesain untuk mengoptimalkan konsumsi bahan bakar dan performa
-                yang maksimal.
+                Vespa GTS Super Tech 300 terbaru mewakili model terbaik dan yang
+                paling bertenaga yang pernah ada di Vespa. <br />
+                <br />
+                Vespa Super Tech 300 menawarkan karakter kuat dan menghadirkan
+                pengalaman berkendara terbaik melalui desain menawan, mesin
+                paling canggih dan teknologi paling canggih.
               </p>
               <p class="font">
                 *) Harga tertera adalah harga On the Road (OTR) Jadetabek 2022.
@@ -299,7 +294,7 @@
               <!-- Preview before Download PDF -->
               <a
                 target="_blank"
-                onclick="window.location.href='files/VESPA-LX-125-i-get-Brochure_belivespa.com_Irvan_2.pdf';"
+                onclick="window.location.href='files/VESPA-GTS-SUPER-TECH-300-Brochure_belivespa.com_Irvan.pdf';"
                 class="btn btn-primary-1 btn-lg"
               >
                 Download Brosur
@@ -327,26 +322,14 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/LED LX.png 375, img/vespa kecil/LED LX.png 480, img/vespa kecil/LED LX.png 800"
-                  data-src="img/vespa kecil/LED LX.png"
-                >
-                  <div class="item">
-                    <a href="">
-                      <img class="img-fluid" src="img/vespa kecil/LED LX.png" />
-                    </a>
-                  </div>
-                </li>
-                <li
-                  class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
-                  data-category="transition"
-                  data-responsive="img/vespa kecil/knalpot LX.png 375, img/vespa kecil/knalpot LX.png 480, img/vespa kecil/knalpot LX.png 800"
-                  data-src="img/vespa kecil/knalpot LX.png"
+                  data-responsive="img/vespa kecil/LED gtssupertech.png 375, img/vespa kecil/LED gtssupertech.png 480, img/vespa kecil/LED gtssupertech.png 800"
+                  data-src="img/vespa kecil/LED gtssupertech.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/knalpot LX.png"
+                        src="img/vespa kecil/LED gtssupertech.png"
                       />
                     </a>
                   </div>
@@ -354,14 +337,14 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/mesin LX.png 375, img/vespa kecil/mesin LX.png 480, img/vespa kecil/mesin LX.png 800"
-                  data-src="img/vespa kecil/mesin LX.png"
+                  data-responsive="img/vespa kecil/spido gtssupertech.png 375, img/vespa kecil/spido gtssupertech.png 480, img/vespa kecil/spido gtssupertech.png 800"
+                  data-src="img/vespa kecil/spido gtssupertech.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/mesin LX.png"
+                        src="img/vespa kecil/spido gtssupertech.png"
                       />
                     </a>
                   </div>
@@ -369,14 +352,29 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/Spido LX.png 375, img/vespa kecil/Spido LX.png 480, img/vespa kecil/Spido LX.png 800"
-                  data-src="img/vespa kecil/Spido LX.png"
+                  data-responsive="img/vespa kecil/duduk gtssupertech.png 375, img/vespa kecil/duduk gtssupertech.png 480, img/vespa kecil/duduk gtssupertech.png 800"
+                  data-src="img/vespa kecil/duduk gtssupertech.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/Spido LX.png"
+                        src="img/vespa kecil/duduk gtssupertech.png"
+                      />
+                    </a>
+                  </div>
+                </li>
+                <li
+                  class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
+                  data-category="transition"
+                  data-responsive="img/vespa kecil/mesin gtssupertech.png 375, img/vespa kecil/mesin gtssupertech.png 480, img/vespa kecil/mesin gtssupertech.png 800"
+                  data-src="img/vespa kecil/mesin gtssupertech.png"
+                >
+                  <div class="item">
+                    <a href="">
+                      <img
+                        class="img-fluid"
+                        src="img/vespa kecil/mesin gtssupertech.png"
                       />
                     </a>
                   </div>
@@ -412,7 +410,10 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Mesin</td>
-                  <td>i-get, 4 langkah, silinder tunggal dengan 3 katup</td>
+                  <td>
+                    HPE (High Performance Engine), silinder tunggal 4 katup, 4
+                    langkah
+                  </td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -422,22 +423,22 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Kapasitas</td>
-                  <td>124,5 cc</td>
+                  <td>278,3 cc</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Daya Maks.</td>
-                  <td>7,6 kW @ 7.600 rpm</td>
+                  <td>17,5 kW @ 8.250 rpm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Torsi Maks.</td>
-                  <td>10,2 Nm @ 6.000 rpm</td>
+                  <td>26 Nm @ 5.250 rpm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Sistem Pendingin</td>
-                  <td>Sirkulasi Udara Tekan</td>
+                  <td>Berpendingin Cairan</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -449,7 +450,7 @@
                   <td colspan="2">Suspensi Depan</td>
                   <td>
                     Lengan tunggal dengan pegas helikal dan peredam kejut
-                    hidrolik tunggal dengan aksi ganda
+                    hidrolik tunggal
                   </td>
                 </tr>
                 <tr>
@@ -476,43 +477,51 @@
               <tbody>
                 <tr>
                   <th scope="row"></th>
+                  <td colspan="2">Sistem Pengereman</td>
+                  <td>
+                    Dual Channel ABS, ASR - Anti Slip Regulation (sistem kontrol
+                    traksi)
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row"></th>
                   <td colspan="2">Rem Depan</td>
-                  <td>Cakram 200 mm</td>
+                  <td>Cakram 220 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Rem Belakang</td>
-                  <td>Tromol 110 mm</td>
+                  <td>Cakram 220 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ban Depan</td>
-                  <td>Tubeless 110/70-11"</td>
+                  <td>Tubeless 120/70 – 12"</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ban Belakang</td>
-                  <td>Tubeless 110/70-10"</td>
+                  <td>Tubeless 130/70 – 12"</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Panjang / Lebar</td>
-                  <td>1.770 mm / 705 mm</td>
+                  <td>1.950 mm / 755 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Jarak Sumbu Roda</td>
-                  <td>1.280 mm</td>
+                  <td>1.375 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ketinggian Jok</td>
-                  <td>785 mm</td>
+                  <td>790 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Kapasitas Tangki</td>
-                  <td>7 (± 0,5) liter</td>
+                  <td>8,5 (± 0,5) liter</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -609,7 +618,6 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
       integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
@@ -621,7 +629,6 @@
       integrity="sha512-Qpvw3WG46QyOqV/YS9BosbxEbMKPREA+QS+iWAKXfvb/87tdfsGGQdT7vqYbQzBOgLvF2I/MHMacA86oURHsCw=="
       crossorigin="anonymous"
     ></script>
-
     <script src="js/main.js"></script>
     <script>
       $("#lightgallery").lightGallery({
