--- a/primavera.html
+++ b/primavera.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vespa Ciledug | Varian LX</title>
+    <title>Vespa Ciledug | Varian PRIMAVERA</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -168,12 +168,12 @@
     </span>
     <!-- end navbar -->
 
-    <section class="vespa-one">
+    <section class="vespa-one-prima">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12 col-12">
             <div class="card-cstm-vespa">
-              <img src="img/vespapng/LXnew.png" alt="" />
+              <img src="img/vespapng/primaveranew.png" alt="" />
             </div>
           </div>
         </div>
@@ -184,12 +184,8 @@
       <div class="gradient">
         <img src="img/bg-gradient-blurred.svg" />
         <div class="centered">
-          <h3>VESPA LX 125 I-GET</h3>
-          <p>
-            Desainnya yang serupa dengan bentuk tawon membuat karakteristik
-            Vespa menjadi unik yang memadukan secara harmonis antara warisan
-            budaya Vespa dengan modernitas abad 21.
-          </p>
+          <h3>VESPA PRIMAVERA 150 I-GET ABS</h3>
+          <p>Simbol ikonik dari hasrat dan esensi keanggunan urban</p>
         </div>
       </div>
     </section>
@@ -222,21 +218,21 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/Primavera/primavera-green-relax.png"
                     alt="First slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-grey-delicato.png"
+                    src="img/Primavera/primavera-grey-materia.png"
                     alt="Second slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="img/LX/lx-red-passione.png"
+                    src="img/Primavera/primavera-orange-tramonto.png"
                     alt="Third slide"
                   />
                 </div>
@@ -265,8 +261,8 @@
               </a>
             </div>
             <div class="centered-two text-center">
-              <h1>Rp.40.500.000,-</h1>
-              <p>Rp 41,200,000, (OTR BOGOR)</p>
+              <h1>Rp.48.200.000,-</h1>
+              <p>Rp 48,900,000, (OTR BOGOR)</p>
             </div>
             <button
               type="button"
@@ -278,17 +274,18 @@
           </div>
           <div class="col-lg-8 col-12">
             <div class="masak">
-              <h1>DAPATKAN PENGALAMAN LEBIH DENGAN VESPA LX TERBARU</h1>
+              <h1>HIDUP PENUH HASRAT DENGAN PRIMAVERA</h1>
               <p>
-                Vespa LX 125 i-get sudah menggunakan mesin i-get (Italian Green
-                Experience Technology). Teknologi ini akan meningkatkan
-                performa, efisiensi bahan bakar dan mengurangi kebisingan dalam
-                berkendara serta sangat efisien. Seluruh detail mulai dari
-                saluran pembuangan, hingga penutup gearbox telah dirancang untuk
-                memberikan pengalaman berkendara yang lebih nyaman. Komponen
-                mekanikal dan elektronik dari mesin juga telah sepenuhnya
-                didesain untuk mengoptimalkan konsumsi bahan bakar dan performa
-                yang maksimal.
+                Sebuah ikon teknologi mutakhir: Primavera adalah kombinasi yang
+                brilian antara tradisi, inovasi, dan ramah pada lingkungan.Vespa
+                Primavera telah menjadi sebuah revolusi dalam berkendara sejak
+                1968 dan menjadi ikon klasik sepanjang masa.Dengan karakternya
+                yang muda, lincah, inovatif, aman dan ramah lingkungan, Vespa
+                Primavera merupakan bintang yang sebenarnya dari masa ke masa.
+                Dan revolusi tersebut pun kini berlanjut, Vespa Primavera
+                terbaru hadir dengan peningkatan pada aspek keamanan, kenyamanan
+                dan gaya, juga dengan berbagai tambahan fitur menarik dan juga
+                beberapa edisi spesial.
               </p>
               <p class="font">
                 *) Harga tertera adalah harga On the Road (OTR) Jadetabek 2022.
@@ -299,7 +296,7 @@
               <!-- Preview before Download PDF -->
               <a
                 target="_blank"
-                onclick="window.location.href='files/VESPA-LX-125-i-get-Brochure_belivespa.com_Irvan_2.pdf';"
+                onclick="window.location.href='files/VESPA-PRIMAVERA-150-i-get-ABS-Brochure_belivespa.com_Irvan.pdf';"
                 class="btn btn-primary-1 btn-lg"
               >
                 Download Brosur
@@ -327,26 +324,14 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/LED LX.png 375, img/vespa kecil/LED LX.png 480, img/vespa kecil/LED LX.png 800"
-                  data-src="img/vespa kecil/LED LX.png"
-                >
-                  <div class="item">
-                    <a href="">
-                      <img class="img-fluid" src="img/vespa kecil/LED LX.png" />
-                    </a>
-                  </div>
-                </li>
-                <li
-                  class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
-                  data-category="transition"
-                  data-responsive="img/vespa kecil/knalpot LX.png 375, img/vespa kecil/knalpot LX.png 480, img/vespa kecil/knalpot LX.png 800"
-                  data-src="img/vespa kecil/knalpot LX.png"
+                  data-responsive="img/vespa kecil/LED Prima.png 375, img/vespa kecil/LED Prima.png 480, img/vespa kecil/LED Prima.png 800"
+                  data-src="img/vespa kecil/LED Prima.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/knalpot LX.png"
+                        src="img/vespa kecil/LED Prima.png"
                       />
                     </a>
                   </div>
@@ -354,14 +339,14 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/mesin LX.png 375, img/vespa kecil/mesin LX.png 480, img/vespa kecil/mesin LX.png 800"
-                  data-src="img/vespa kecil/mesin LX.png"
+                  data-responsive="img/vespa kecil/spido prima.png 375, img/vespa kecil/spido prima.png 480, img/vespa kecil/spido prima.png 800"
+                  data-src="img/vespa kecil/spido prima.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/mesin LX.png"
+                        src="img/vespa kecil/spido prima.png"
                       />
                     </a>
                   </div>
@@ -369,14 +354,29 @@
                 <li
                   class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
                   data-category="transition"
-                  data-responsive="img/vespa kecil/Spido LX.png 375, img/vespa kecil/Spido LX.png 480, img/vespa kecil/Spido LX.png 800"
-                  data-src="img/vespa kecil/Spido LX.png"
+                  data-responsive="img/vespa kecil/duduk prima.png 375, img/vespa kecil/duduk prima.png, img/vespa kecil/duduk prima.png"
+                  data-src="img/vespa kecil/duduk prima.png"
                 >
                   <div class="item">
                     <a href="">
                       <img
                         class="img-fluid"
-                        src="img/vespa kecil/Spido LX.png"
+                        src="img/vespa kecil/duduk prima.png"
+                      />
+                    </a>
+                  </div>
+                </li>
+                <li
+                  class="col-lg-3 col-md-6 col-sm-6 col-6 transition grid-item"
+                  data-category="transition"
+                  data-responsive="img/vespa kecil/mesin prima.png 375, img/vespa kecil/mesin prima.png 480, img/vespa kecil/mesin prima.png 800"
+                  data-src="img/vespa kecil/mesin prima.png"
+                >
+                  <div class="item">
+                    <a href="">
+                      <img
+                        class="img-fluid"
+                        src="img/vespa kecil/mesin prima.png"
                       />
                     </a>
                   </div>
@@ -422,17 +422,17 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Kapasitas</td>
-                  <td>124,5 cc</td>
+                  <td>154,8 cc</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Daya Maks.</td>
-                  <td>7,6 kW @ 7.600 rpm</td>
+                  <td>8,7 kW @ 7,500 rpm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Torsi Maks.</td>
-                  <td>10,2 Nm @ 6.000 rpm</td>
+                  <td>12 Nm @ 5,000 rpm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -477,37 +477,37 @@
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Rem Depan</td>
-                  <td>Cakram 200 mm</td>
+                  <td>Cakram 220 mm ABS</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Rem Belakang</td>
-                  <td>Tromol 110 mm</td>
+                  <td>Tromol 140 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ban Depan</td>
-                  <td>Tubeless 110/70-11"</td>
+                  <td>Tubeless 110/70-12”</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ban Belakang</td>
-                  <td>Tubeless 110/70-10"</td>
+                  <td>Tubeless 120/70-12”</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Panjang / Lebar</td>
-                  <td>1.770 mm / 705 mm</td>
+                  <td>1.863 mm / 695 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Jarak Sumbu Roda</td>
-                  <td>1.280 mm</td>
+                  <td>1.334 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
                   <td colspan="2">Ketinggian Jok</td>
-                  <td>785 mm</td>
+                  <td>790 mm</td>
                 </tr>
                 <tr>
                   <th scope="row"></th>
@@ -609,7 +609,6 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
       integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
@@ -621,7 +620,6 @@
       integrity="sha512-Qpvw3WG46QyOqV/YS9BosbxEbMKPREA+QS+iWAKXfvb/87tdfsGGQdT7vqYbQzBOgLvF2I/MHMacA86oURHsCw=="
       crossorigin="anonymous"
     ></script>
-
     <script src="js/main.js"></script>
     <script>
       $("#lightgallery").lightGallery({
